Add gtk builder code of the plugins in a common file.

--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -10,18 +10,22 @@ noinst_LTLIBRARIES = \
 	libpanel-xfconf.la
 
 libpanel_xfconf_la_SOURCES = \
+	panel-builder.c \
+	panel-builder.h \
 	panel-xfconf.c \
 	panel-xfconf.h
 
 libpanel_xfconf_la_CFLAGS = \
-	$(XFCONF_CFLAGS)
+	$(XFCONF_CFLAGS) \
+	$(GTK_CFLAGS)
 
 libpanel_xfconf_la_LDFLAGS = \
 	-no-undefined \
 	$(PLATFORM_LDFLAGS)
 
 libpanel_xfconf_la_LIBADD = \
-	$(XFCONF_LIBS)
+	$(XFCONF_LIBS) \
+	$(GTK_LIBS)
 
 EXTRA_DIST = \
 	panel-dbus.h \
