Fix broken POTFILES.in.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -39,7 +39,7 @@ panel/panel-preferences-dialog.ui
 plugins/actions/actions-dialog.ui
 plugins/launcher/launcher-dialog.ui
 plugins/separator/separator-dialog.ui
-plugins/windowmenu/windowmenu-dialog.uilade
+plugins/windowmenu/windowmenu-dialog.ui
 plugins/tasklist/tasklist-dialog.ui
 plugins/pager/pager-dialog.ui
 plugins/clock/clock-dialog.ui
