Drop the visibility stuff and use a symbols regex.

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -50,6 +50,7 @@ libxfce4panel_la_LDFLAGS = \
 	-no-undefined \
 	-export-dynamic \
 	-version-info $(LIBXFCE4PANEL_VERINFO) \
+	-export-symbols-regex '^[^_].*' \
 	$(PLATFORM_LDFLAGS)
 
 libxfce4panel_la_LIBADD = \
