Use a symbols regex in the plugins too.

--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -41,6 +41,7 @@ libclock_la_LDFLAGS =	 \
 	-avoid-version \
 	-module \
 	-no-undefined \
+	-export-symbols-regex '^xfce_panel_module_(preinit|init|construct)' \
 	$(PLATFORM_LDFLAGS)
 
 libclock_la_LIBADD = \
