--- a/plugins/tasklist/Makefile.am
+++ b/plugins/tasklist/Makefile.am
@@ -34,6 +34,7 @@ libtasklist_la_LDFLAGS = \
 	-avoid-version \
 	-module \
 	-no-undefined \
+	-export-symbols-regex '^xfce_panel_module_(preinit|init|construct)' \
 	$(PLATFORM_LDFLAGS)
 
 libtasklist_la_LIBADD = \
