--- a/plugins/actions/Makefile.am
+++ b/plugins/actions/Makefile.am
@@ -31,6 +31,7 @@ libactions_la_LDFLAGS = \
 	-avoid-version \
 	-module \
 	-no-undefined \
+	-export-symbols-regex '^xfce_panel_module_(preinit|init|construct)' \
 	$(PLATFORM_LDFLAGS)
 
 libactions_la_LIBADD = \
