--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -39,6 +39,7 @@ liblauncher_la_LDFLAGS = \
 	-avoid-version \
 	-module \
 	-no-undefined \
+	-export-symbols-regex '^xfce_panel_module_(preinit|init|construct)' \
 	$(PLATFORM_LDFLAGS)
 
 liblauncher_la_LIBADD = \
