--- a/plugins/separator/Makefile.am
+++ b/plugins/separator/Makefile.am
@@ -32,6 +32,7 @@ libseparator_la_LDFLAGS = \
 	-avoid-version \
 	-module \
 	-no-undefined \
+	-export-symbols-regex '^xfce_panel_module_(preinit|init|construct)' \
 	$(PLATFORM_LDFLAGS)
 
 libseparator_la_LIBADD = \
