--- a/plugins/systray/Makefile.am
+++ b/plugins/systray/Makefile.am
@@ -40,6 +40,7 @@ libsystray_la_LDFLAGS = \
 	-avoid-version \
 	-module \
 	-no-undefined \
+	-export-symbols-regex '^xfce_panel_module_(preinit|init|construct)' \
 	$(PLATFORM_LDFLAGS)
 
 libsystray_la_LIBADD = \
