--- a/plugins/windowmenu/Makefile.am
+++ b/plugins/windowmenu/Makefile.am
@@ -33,6 +33,7 @@ libwindowmenu_la_LDFLAGS = \
 	-avoid-version \
 	-module \
 	-no-undefined \
+	-export-symbols-regex '^xfce_panel_module_(preinit|init|construct)' \
 	$(PLATFORM_LDFLAGS)
 
 libwindowmenu_la_LIBADD = \
