Initial import of the migration application.
This application will carefully migrate the old panel
configuration to xfconf. Plugins and their setting are
not ready yet.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,8 +4,9 @@ SUBDIRS = \
 	common \
 	panel \
 	plugins \
-	po \
-	wrapper
+	wrapper \
+	migrate \
+	po
 
 distclean-local:
 	rm -rf *.spec *.cache *~
