--- a/configure.in.in
+++ b/configure.in.in
@@ -170,6 +170,7 @@ Makefile
 common/Makefile
 libxfce4panel/Makefile
 libxfce4panel/libxfce4panel-1.0.pc
+migrate/Makefile
 panel/Makefile
 wrapper/Makefile
 plugins/Makefile
