Silent generated files in libxfce4panel too.

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -71,10 +71,10 @@ EXTRA_DIST = \
 #
 if MAINTAINER_MODE
 libxfce4panel-marshal.h: libxfce4panel-marshal.list Makefile
-	glib-genmarshal --prefix=_libxfce4panel_marshal --internal --header $< > $@
+	$(AM_V_GEN) glib-genmarshal --prefix=_libxfce4panel_marshal --internal --header $< > $@
 
 libxfce4panel-marshal.c: libxfce4panel-marshal.list Makefile
-	echo "#include <libxfce4panel/libxfce4panel-marshal.h>" > $@ \
+	$(AM_V_GEN) echo "#include <libxfce4panel/libxfce4panel-marshal.h>" > $@ \
 	&& glib-genmarshal --prefix=_libxfce4panel_marshal --body $< >> $@
 
 DISTCLEANFILES = \
