Generate the XfceScreenPosition enum type.

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -10,18 +10,23 @@ INCLUDES = \
 lib_LTLIBRARIES = \
 	libxfce4panel.la
 
+libxfce4panel_public_built_sources = \
+	libxfce4panel-enum-types.h
+
 libxfce4panel_built_sources = \
+	$(libxfce4panel_public_built_sources) \
 	libxfce4panel-alias.h \
 	libxfce4panel-aliasdef.c \
+	libxfce4panel-enum-types.c \
 	libxfce4panel-marshal.c \
 	libxfce4panel-marshal.h
 
 libxfce4panel_headers = \
 	libxfce4panel.h \
+	libxfce4panel-enums.h \
 	xfce-arrow-button.h \
 	xfce-hvbox.h \
 	xfce-panel-convenience.h \
-	xfce-panel-enums.h \
 	xfce-panel-macros.h \
 	xfce-panel-plugin.h \
 	xfce-panel-image.h
@@ -30,6 +35,7 @@ libxfce4panel_includedir = \
 	$(includedir)/xfce4/libxfce4panel
 
 libxfce4panel_include_HEADERS = \
+	$(libxfce4panel_public_built_sources) \
 	$(libxfce4panel_headers)
 
 libxfce4panel_la_SOURCES = \
@@ -81,6 +87,24 @@ libxfce4panel-alias.h: make-libxfce4panel-alias.pl libxfce4panel.symbols
 
 libxfce4panel-aliasdef.c: make-libxfce4panel-alias.pl libxfce4panel.symbols
 	$(AM_V_GEN) $(PERL) $(srcdir)/make-libxfce4panel-alias.pl -def < $(srcdir)/libxfce4panel.symbols > $@
+
+libxfce4panel-enum-types.h: $(libxfce4panel_headers) Makefile
+	$(AM_V_GEN) ( cd $(srcdir) && glib-mkenums \
+		--fhead "#ifndef __LIBXFCE4PANEL_ENUM_TYPES_H__\n#define __LIBXFCE4PANEL_ENUM_TYPES_H__\n#include <glib-object.h>\nG_BEGIN_DECLS\n" \
+		--fprod "/* enumerations from \"@filename@\" */\n" \
+		--vhead "GType @enum_name@_get_type (void) G_GNUC_CONST;\n#define XFCE_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n" \
+		--ftail "G_END_DECLS\n\n#endif /* !__LIBXFCE4PANEL_ENUM_TYPES_H__ */" \
+		$(libxfce4panel_headers) ) > $@
+
+libxfce4panel-enum-types.c:  $(libxfce4panel_headers) Makefile
+	$(AM_V_GEN) ( cd $(srcdir) && glib-mkenums \
+		--fhead "#include <libxfce4panel/libxfce4panel-enums.h>\n#include <libxfce4panel/libxfce4panel-enum-types.h>\n#include <libxfce4panel/libxfce4panel-alias.h>" \
+		--fprod "\n/* enumerations from \"@filename@\" */" \
+		--vhead "GType\n@enum_name@_get_type (void)\n{\n\tstatic GType type = 0;\n\tif (type == 0) {\n\tstatic const G@Type@Value values[] = {"\
+		--vprod "\t{ @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
+		--vtail "\t{ 0, NULL, NULL }\n\t};\n\ttype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n\treturn type;\n}\n" \
+		--ftail "\n#define __LIBXFCE4PANEL_ENUM_TYPES_C__\n#include <libxfce4panel/libxfce4panel-aliasdef.c>\n" \
+		$(libxfce4panel_headers) ) > $@
 
 DISTCLEANFILES = \
 	$(libxfce4panel_built_sources)
