Add 2 missing file to POTFILES.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,3 +1,6 @@
+panel-desktop-handler.desktop.in
+panel-preferences.desktop.in
+
 libxfce4panel/libxfce4panel.h
 libxfce4panel/xfce-arrow-button.c
 libxfce4panel/xfce-arrow-button.h
