--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -1,53 +1,48 @@
 
 INCLUDES = \
 	-I$(top_srcdir) \
-	-I$(top_builddir) \
 	-DG_LOG_DOMAIN=\"xfce4-panel-wrapper\" \
-	-DDATADIR=\"$(datadir)\" \
-	-DLIBDIR=\"$(libdir)/xfce4\" \
-	-DLIBEXECDIR=\"$(libexecdir)/xfce4\" \
-	-DSYSCONFDIR=\"$(sysconfdir)\" \
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
 	$(PLATFORM_CPPFLAGS)
 
-libexec_PROGRAMS = \
-	xfce4-panel-wrapper
+wrapperdir = $(libexecdir)/xfce4/panel
 
-xfce4_panel_wrapper_built_sources = \
+wrapper_PROGRAMS = \
+	wrapper
+
+wrapper_built_sources = \
 	wrapper-dbus-client-infos.h \
 	wrapper-marshal.h \
 	wrapper-marshal.c
 
-xfce4_panel_wrapper_SOURCES = \
-	$(xfce4_panel_wrapper_built_sources) \
+wrapper_SOURCES = \
+	$(wrapper_built_sources) \
 	main.c \
 	wrapper-module.c \
 	wrapper-module.h \
 	wrapper-plug.c \
 	wrapper-plug.h
 
-xfce4_panel_wrapper_CFLAGS = \
+wrapper_CFLAGS = \
 	$(GTK_CFLAGS) \
 	$(DBUS_CFLAGS) \
 	$(GMODULE_CFLAGS) \
-	$(GTHREAD_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
-xfce4_panel_wrapper_LDFLAGS = \
+wrapper_LDFLAGS = \
 	-no-undefined \
 	$(PLATFORM_LDFLAGS)
 
-xfce4_panel_wrapper_LDADD = \
-	$(top_builddir)/libxfce4panel/libxfce4panel.la \
+wrapper_LDADD = \
+	$(top_builddir)/libxfce4panel/libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).la \
 	$(GTK_LIBS) \
 	$(DBUS_LIBS) \
 	$(GMODULE_LIBS) \
-	$(GTHREAD_LIBS) \
 	$(LIBXFCE4UTIL_LIBS)
 
-xfce4_panel_wrapper_DEPENDENCIES = \
-	$(top_builddir)/libxfce4panel/libxfce4panel.la
+wrapper_DEPENDENCIES = \
+	$(top_builddir)/libxfce4panel/libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).la
 
 if MAINTAINER_MODE
 wrapper-dbus-client-infos.h: $(top_builddir)/panel/panel-dbus-service-infos.xml Makefile
@@ -61,10 +56,10 @@ wrapper-marshal.c: $(top_builddir)/panel/panel-marshal.list Makefile
 	&& glib-genmarshal --body --prefix=wrapper_marshal $< >> $@
 
 BUILT_SOURCES = \
-	$(xfce4_panel_wrapper_built_sources)
+	$(wrapper_built_sources)
 
 DISTCLEANFILES = \
-	$(xfce4_panel_wrapper_built_sources)
+	$(wrapper_built_sources)
 endif
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
