--- a/libxfce4panel/libxfce4panel-2.pc.in
+++ b/libxfce4panel/libxfce4panel-2.pc.in
@@ -11,5 +11,5 @@ Name: libxfce4panel
 Description: Library for the Xfce Panel
 Requires: gtk+-2.0 gmodule-2.0 glib-2.0 libxfce4util-1.0
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lxfce4panel
-Cflags: -I${includedir}/xfce4/
+Libs: -L${libdir} -lxfce4panel-@LIBXFCE4PANEL_VERSION_API@
+Cflags: -I${includedir}/xfce4/libxfce4panel-@LIBXFCE4PANEL_VERSION_API@
