Add xfconf xml importer and default config.
Add a parser to import an xml channel file into a
channel and add a default configuration.

The migration utility will now prompt with a
question dialog whether to import the olf 4.6
config or use the default setup.

--- a/migrate/Makefile.am
+++ b/migrate/Makefile.am
@@ -3,12 +3,13 @@ INCLUDES = \
 	-I$(top_srcdir) \
 	-I$(top_builddir) \
 	-DG_LOG_DOMAIN=\"xfce4-panel-migrate\" \
-	-DDATADIR=\"$(datadir)\" \
-	-DLIBDIR=\"$(libdir)/xfce4\" \
-	-DLIBEXECDIR=\"$(libexecdir)/xfce4\" \
-	-DSYSCONFDIR=\"$(sysconfdir)\" \
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
+	-DDEFAULT_CONFIG=\"$(sysconfdir)/xdg/xfce4/panel/default.xml\" \
 	$(PLATFORM_CPPFLAGS)
+
+confdir = $(sysconfdir)/xdg/xfce4/panel
+conf_DATA = \
+	default.xml
 
 libexec_PROGRAMS = \
 	xfce4-panel-migrate
@@ -16,12 +17,15 @@ libexec_PROGRAMS = \
 xfce4_panel_migrate_SOURCES = \
 	main.c \
 	migrate-46.c \
-	migrate-46.h
+	migrate-46.h \
+	migrate-default.c \
+	migrate-default.h
 
 xfce4_panel_migrate_CFLAGS = \
 	$(GTK_CFLAGS) \
 	$(XFCONF_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
+	$(LIBXFCE4UI_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 xfce4_panel_migrate_LDFLAGS = \
@@ -31,6 +35,10 @@ xfce4_panel_migrate_LDFLAGS = \
 xfce4_panel_migrate_LDADD = \
 	$(GTK_LIBS) \
 	$(XFCONF_LIBS) \
-	$(LIBXFCE4UTIL_LIBS)
+	$(LIBXFCE4UTIL_LIBS) \
+	$(LIBXF		CE4UI_LIBS)
+
+EXTRA_DIST = \
+	default.xml
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
