Add version check functions to library.

--- a/configure.in.in
+++ b/configure.in.in
@@ -182,6 +182,7 @@ Makefile
 common/Makefile
 libxfce4panel/Makefile
 libxfce4panel/libxfce4panel-1.0.pc
+libxfce4panel/libxfce4panel-config.h
 migrate/Makefile
 panel/Makefile
 wrapper/Makefile
