--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -6,7 +6,7 @@ INCLUDES = \
 	$(PLATFORM_CPPFLAGS)
 
 lib_LTLIBRARIES = \
-	libxfce4panel-2.la
+	libxfce4panel-1.0.la
 
 libxfce4panel_public_built_sources = \
 	libxfce4panel-enum-types.h
@@ -21,6 +21,7 @@ libxfce4panel_built_sources = \
 
 libxfce4panel_headers = \
 	libxfce4panel.h \
+	libxfce4panel-deprecated.h \
 	libxfce4panel-enums.h \
 	xfce-arrow-button.h \
 	xfce-hvbox.h \
@@ -36,7 +37,7 @@ libxfce4panel_include_HEADERS = \
 	$(libxfce4panel_public_built_sources) \
 	$(libxfce4panel_headers)
 
-libxfce4panel_2_la_SOURCES = \
+libxfce4panel_1_0_la_SOURCES = \
 	$(libxfce4panel_built_sources) \
 	$(libxfce4panel_headers) \
 	xfce-arrow-button.c \
@@ -47,19 +48,19 @@ libxfce4panel_2_la_SOURCES = \
 	xfce-panel-plugin-provider.h \
 	xfce-panel-image.c
 
-libxfce4panel_2_la_CFLAGS =	 \
+libxfce4panel_1_0_la_CFLAGS =	 \
 	$(GTK_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
-libxfce4panel_2_la_LDFLAGS = \
+libxfce4panel_1_0_la_LDFLAGS = \
 	-no-undefined \
 	-export-dynamic \
 	-version-info $(LIBXFCE4PANEL_VERINFO) \
 	-export-symbols-regex '^[^_].*' \
 	$(PLATFORM_LDFLAGS)
 
-libxfce4panel_2_la_LIBADD = \
+libxfce4panel_1_0_la_LIBADD = \
 	$(GTK_LIBS) \
 	$(LIBXFCE4UTIL_LIBS)
 
@@ -67,7 +68,7 @@ libxfce4panel_2_la_LIBADD = \
 # Pkg-config file
 #
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libxfce4panel-2.pc
+pkgconfig_DATA = libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).pc
 
 #
 # Build sources
