--- a/plugins/showdesktop/Makefile.am
+++ b/plugins/showdesktop/Makefile.am
@@ -5,7 +5,7 @@ INCLUDES = \
 	-DWNCK_I_KNOW_THIS_IS_UNSTABLE \
 	$(PLATFORM_CPPFLAGS)
 
-plugindir = $(libdir)/xfce4/panel
+plugindir = $(libdir)/xfce4/panel-plugins
 
 plugin_LTLIBRARIES = \
 	libshowdesktop.la
@@ -39,7 +39,7 @@ libshowdesktop_la_DEPENDENCIES = \
 #
 # .desktop file
 #
-desktopdir = $(datadir)/xfce4/panel
+desktopdir = $(datadir)/xfce4/panel-plugins
 desktop_in_files = showdesktop.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
